# tlpi

./: .gitignore  CMakeLists.txt
chapter4/: CMakeLists.txt
chapter4/append/: CMakeLists.txt  main.cpp
chapter4/copy/: CMakeLists.txt  main.cpp
chapter4/examples/: CMakeLists.txt  t_getopt.cpp
chapter4/exercises/: CMakeLists.txt
chapter4/open_directory/: CMakeLists.txt  main.cpp
chapter4/read_stdin/: CMakeLists.txt  main.cpp
chapter4/seek_io/: CMakeLists.txt  main.cpp
chapter4/tee/: main.cpp
chapter5/exercises/: CMakeLists.txt  exercise_2.cpp  exercise_5.cpp  exercise_5_1.cpp  exercise_5_3.cpp  exercise_5_4.cpp  exercise_5_6.cpp  exercise_5_7.cpp
chapter6/exercises/: CMakeLists.txt  exercise_6_1.cpp  exercise_6_3.cpp
chapter7/: CMakeLists.txt
chapter7/exercises/: CMakeLists.txt  exercise_7_2.cpp
chapter8/examples/: CMakeLists.txt  check_password.cpp
chapter8/exercises/: CMakeLists.txt  exercise_8_2.cpp
lib/: CMakeLists.txt  tlpi_hdr.h
